# SDKL-Old

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  SDK_L.cbp  cmake_install.cmake  main.cpp  pybind.py  readme.2.md  tool.json
api/tests/: ordered_map.cpp
bypass/: recent.cxx  recent.icc  shift.cc  shift.inl
compiler/: README  bash.h  cmd.h  compiler.cpp  cref.h  cxx.h  htmltone.h  icp.h  isofwd.h  js.h  parsers.h
compiler/engine/: append.h
cs/spm/: README.md
docs/tutorial/creating-a-custom-compiler/: index.md
driver/: dev.cpp  drv.h  ek.h  filename_base.cpp  filename_base.h  mx.cpp  utils.h
except/: exception.h  get.h
except/perl/: Error.pm  SDKLTypeError.pm
inc/: sdkl.h
misc/: spm.cxx
parser/: SDKDOMFile.h  SDK_CallbackMethod.h  SDK_Postype.h  Sdk_Class.h  Sdk_State.h  compile.h  grouper.cpp  native.h  parse.h  pdef.h  regex.h  sdk__om.h  spaceremove.h  wildcard.h  write.h
projects/: build.h  sdkproj-run.cpp
site/: sdkl_examples.html
standards/1.0/: 1.0.cpp  grammar.h  tatic.h
state/: cur.h  dom.h
structinfo/: script.h  support.h
syntax/: entries.sdk
tests/helloworld/: sdkSourceDir.xml
tests/helloworld/src/: index.sdk
tests/time/: sdkSourceDir.xml
tests/time/src/: index.sdk
tokenizer/: attrib.h  read.h  stat.h  types.h
